--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.cloud.stream.bindings.output.destination: money-transaction
 
 spring.data.mongodb.uri= mongodb://localhost:27017/yanki_transaction
 spring.application.name= yanki-transaction
+
+eureka.instance.prefer-ip-address= true
+#instance-id: ${spring.application.name}:${random.value}
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
